--- a/Makefile.am
+++ b/Makefile.am
@@ -6,25 +6,20 @@ AM_LDFLAGS  = -pthread                                      \
               -L/usr/lib -ldl -lm                            
 
 AM_CPPFLAGS = -I$(top_srcdir)/include                       \
+              -std=c++11
 AM_FCFLAGS  = -Jmod
 
 yocto_ldadd              = libyocto.la                      \
                            -ldl -lm                         \
                            -lrt                              
 
-bin_PROGRAMS             = test_client                      \
-                           test_server                       
+bin_PROGRAMS             = test_channel                      
 
-test_client_SOURCES      = src/tests/test_oscilloscope_client.cc
-test_client_LDADD        = $(yocto_ldadd)
-
-test_server_SOURCES      = src/tests/test_surf.cc
-test_server_LDADD        = $(yocto_ldadd)
+test_channel_SOURCES     = src/tests/test_channel.cc
+test_channel_LDADD       = $(yocto_ldadd)
 
 lib_LTLIBRARIES          = libyocto.la
-libyocto_la_SOURCES      = src/packages/common/status.cc                       \
-                           src/packages/channel/Channel.cc                     \
-                           src/packages/test/test.cc                            
+libyocto_la_SOURCES      = src/packages/yocto/Channel.cc                        
 
 libyocto_la_LIBADD         = -lz                                               \
                            -L/usr/lib/x86_64-linux-gnu -lrt
@@ -33,9 +28,6 @@ libyocto_la_LDFLAGS        = -export-symbols-regex '^yocto_[^_]' -fPIC         \
                            -shared -pthread                                    \
                            -L/usr/lib/x86_64-linux-gnu -lrt
 
-pkginclude_HEADERS       = include/packages/common/status.h                    \
-                           include/packages/common/debug.h                     \
-                           include/packages/channel/Channel.h                  \
-                           include/packages/test/test.h                         
+pkginclude_HEADERS       = include/packages/yocto/Channel.h                     
 
 ## *EOF*
