--- a/Makefile.am
+++ b/Makefile.am
@@ -15,14 +15,22 @@ yocto_ldadd              = libyocto.la                      \
                            -lrt                              
 
 bin_PROGRAMS             = yoctocat                         \
+                           yoctomsg                         \
+                           yoctopipe                        \
                            read_channel                     \
                            write_channel                    \
                            basic_channel                    \
                            shmem_channel                    \
                            echo_test
 
-yoctocat_SOURCES         = src/tests/yoctocat.cc
+yoctocat_SOURCES         = src/apps/yoctocat.cc
 yoctocat_LDADD           = $(yocto_ldadd)
+
+yoctomsg_SOURCES         = src/apps/yoctomsg.cc
+yoctomsg_LDADD           = $(yocto_ldadd)
+
+yoctopipe_SOURCES        = src/apps/yoctopipe.cc
+yoctopipe_LDADD          = $(yocto_ldadd)
 
 read_channel_SOURCES     = src/tests/read_channel.cc
 read_channel_LDADD       = $(yocto_ldadd)
@@ -44,6 +52,9 @@ libyocto_la_SOURCES      = src/packages/yocto/Channel.cc                       \
                            src/packages/yocto/BasicChannel.cc                  \
                            src/packages/yocto/ArrayChannel.cc                  \
                            src/packages/yocto/ShmemChannel.cc                  \
+                           src/packages/yocto/YoChannel.cc                     \
+                           src/packages/yocto/Stream.cc                        \
+                           src/packages/yocto/Pipe.cc                          \
                            src/packages/yocto/SharedMemory.cc                   
 
 libyocto_la_LIBADD       = -lz                                                 \
@@ -57,6 +68,9 @@ pkginclude_HEADERS       = include/packages/yocto/Channel.h                    \
                            include/packages/yocto/BasicChannel.h               \
                            include/packages/yocto/ArrayChannel.h               \
                            include/packages/yocto/ShmemChannel.h               \
+                           include/packages/yocto/YoChannel.h                  \
+                           include/packages/yocto/Stream.h                     \
+                           include/packages/yocto/Pipe.h                       \
                            include/packages/yocto/SharedMemory.h                
 
 ## *EOF*
